--- a/src/clean_manipulate.ipynb
+++ b/src/clean_manipulate.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install numpy pandas requests unidecode scikit-learn tqdm"
+    "#!pip install numpy pandas requests unidecode scikit-learn tqdm openpyxl watermark"
    ]
   },
   {
